--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 *
 !.gitignore
 !.latexmkrc
+!.Rprofile
 !abstract.tex
+!conclusion.tex
 !datav.py
 !intro.tex
 !Makefile
 !method.tex
 !model.tex
 !plots.py
+!plots.R
 !README.md
+!renv.lock
 !result.tex
 !thesis.bib
 !thesis.tex
