ADD: model modification

--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,21 @@
 !.latexmkrc
 !.Rprofile
 !abstract.tex
+!appendix.tex
 !conclusion.tex
+!cotton2k.schema.json
 !datav.py
 !intro.tex
 !Makefile
 !method.tex
 !model.tex
+!moo.tex
 !plots.py
 !plots.R
 !README.md
 !renv.lock
 !result.tex
+!sa.tex
 !thesis.bib
 !thesis.tex
 !titlepage.tex
